# biomechanic_depth_matching

./: .gitignore  CMakeLists.txt  README.md
data/calib/: endo.calib
data/scenes/: liver_deform.scn
data/scenes/liver/: scene.scn
data/scenes/liver/polaris/: data0000.xml  data0001.xml  data0002.xml  data0003.xml  data0004.xml  data0005.xml  data0006.xml  data0007.xml  data0008.xml  data0009.xml  data0010.xml  data0011.xml  data0012.xml  data0013.xml  data0014.xml  data0015.xml  data0016.xml  data0017.xml  data0018.xml  data0019.xml  data0020.xml  data0021.xml  data0022.xml  data0023.xml  data0024.xml  data0025.xml  data0026.xml  data0027.xml  data0028.xml  data0029.xml  data0030.xml  data0031.xml  data0032.xml  data0033.xml  data0034.xml  data0035.xml  data0036.xml  data0037.xml  data0038.xml  data0039.xml  (+161 more)
data/scenes/liver/rgbd/: 0.rgbd  1.rgbd  10.rgbd  100.rgbd  101.rgbd  102.rgbd  103.rgbd  104.rgbd  105.rgbd  106.rgbd  107.rgbd  108.rgbd  109.rgbd  11.rgbd  110.rgbd  111.rgbd  112.rgbd  113.rgbd  114.rgbd  115.rgbd  116.rgbd  117.rgbd  118.rgbd  119.rgbd  12.rgbd  120.rgbd  121.rgbd  122.rgbd  123.rgbd  124.rgbd  125.rgbd  126.rgbd  127.rgbd  128.rgbd  129.rgbd  13.rgbd  130.rgbd  131.rgbd  132.rgbd  133.rgbd  (+161 more)
data/scenes/liver/surface/: press_only_frame_0.stl  press_only_frame_1.stl  press_only_frame_10.stl  press_only_frame_100.stl  press_only_frame_101.stl  press_only_frame_102.stl  press_only_frame_103.stl  press_only_frame_104.stl  press_only_frame_105.stl  press_only_frame_106.stl  press_only_frame_107.stl  press_only_frame_108.stl  (+389 more)
data/shaders/: associate.frag  visu.vert
ext/cudapp/: cudapp.hpp
ext/sofa/applications/plugins/MSML/: BoxROIQuadraticTetras.cpp  BoxROIQuadraticTetras.h  BoxROIQuadraticTetras.inl  CMakeLists.txt  MSMLConfig.h  MediAssistConfig.h  QuadraticBaseMeshTopology.h  QuadraticMeshTopology.cpp  QuadraticMeshTopology.h  QuadraticTetrahedronData.h  readme.txt
ext/sofa/applications/plugins/MSML/CMake/: FindCHAI3D.cmake  FindHIFLOW.cmake  FindLEVMAR.cmake  FindMKL.cmake  FindMUMPS.cmake  FindPARALUTION.cmake  FindSOLID.cmake  FindTAUCS.cmake  MSMLConfig.h.in
ext/sofa/applications/plugins/MSML/constraint/: DirichletBoundaryConstraint.cpp  DirichletBoundaryConstraint.h  DirichletBoundaryConstraint.inl
ext/sofa/applications/plugins/MSML/forcefield/: LandmarkSpringsForceField.cpp  LandmarkSpringsForceField.h  LandmarkSpringsForceField.inl  LinearMeshMatrixMass.cpp  LinearMeshMatrixMass.h  LinearMeshMatrixMass.inl  LinearTetrahedralCorotationalFEMForceField.cpp  LinearTetrahedralCorotationalFEMForceField.h  LinearTetrahedralCorotationalFEMForceField.inl  PoissonPotentialForcefieldUtil.h  QuadraticMeshMatrixMass.cpp  QuadraticMeshMatrixMass.h  QuadraticMeshMatrixMass.inl  QuadraticTetrahedralCorotationalFEMForceField.cpp  QuadraticTetrahedralCorotationalFEMForceField.h  QuadraticTetrahedralCorotationalFEMForceField.inl  RotationForceField.h  ShapeMatchingElectricPotentialForcefield.cpp  ShapeMatchingElectricPotentialForcefield.h  ShapeMatchingElectricPotentialForcefield.inl  ShapeMatchingPoissonPotentialForcefield.cpp  ShapeMatchingPoissonPotentialForcefield.h  ShapeMatchingPoissonPotentialForcefield.inl  ShapeMatchingPoissonPotentialForcefieldSimulationDriver.cpp  ShapeMatchingPoissonPotentialForcefieldSimulationDriver.h  ShapeMatchingPoissonPotentialForcefieldSimulationDriver.inl
ext/sofa/applications/plugins/MSML/helper/: ParalutionInitializer.cpp  ParalutionInitializer.h  VisitorCollection.h  local_ntoa.h
ext/sofa/applications/plugins/MSML/io/: ExtendedVTKExporter.cpp  ExtendedVTKExporter.h  MeshExtendedVTKLoader.cpp  MeshExtendedVTKLoader.h  rmkdir.h
ext/sofa/applications/plugins/MSML/linearsolver/: ExternalTypesUtils.h  MumpsSolver.h  MyPCGLinearSolver.cpp  MyPCGLinearSolver.h  ParalutionSolver.cpp  ParalutionSolver.h
ext/sofa/applications/plugins/MSML/linearsolver/precond/: ExplicitPreconditionerOperator.cpp  ExplicitPreconditionerOperator.h  ExplicitPreconditionerOperator.inl  ParalutionPreconditioner.cpp  ParalutionPreconditioner.h  ParalutionPreconditioner.inl  ParalutionPreconditionerOperator.cpp  ParalutionPreconditionerOperator.h  ParalutionPreconditionerOperator.inl  Preconditioner.h  PreconditionerOperator.cpp  PreconditionerOperator.h  PreconditionerOperator.inl
ext/sofa/applications/plugins/MSML/mapper/: CollisionDetectionMeshSampler.cpp  CollisionDetectionMeshSampler.h  MapperLinearTetrahedronSetTopology.cpp  MapperLinearTetrahedronSetTopology.h  MapperLinearTetrahedronSetTopology.inl  MapperQuadraticTetrahedronSetTopology.cpp  MapperQuadraticTetrahedronSetTopology.h  MapperQuadraticTetrahedronSetTopology.inl  MeshSampler.h  StructuredHexahedralMeshSampler.cpp  StructuredHexahedralMeshSampler.h  UnstructuredTetrahedralMeshSampler.cpp  UnstructuredTetrahedralMeshSampler.h
ext/sofa/applications/plugins/MSML/odesolver/: MyNewmarkImplicitSolver.cpp  MyNewmarkImplicitSolver.h  MyStaticSolver.cpp  MyStaticSolver.h  ShapeMatchingNewmarkImplicitSolver.cpp  ShapeMatchingNewmarkImplicitSolver.h
ext/sofa/applications/plugins/MyPlugin.old/: CMakeLists.txt  initEmptyCmakePlugin.cpp  pose_source.hpp  test_component.cpp  test_component.hpp
ext/tinyxml/: tinyxml2.cpp
scripts/: convert
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MumpsSolver.cpp  MyCudaMechanicalObject.cpp  MyCudaMechanicalObject.hpp  TODO  association.hpp  associator.cpp  associator.hpp  biofu_tracker.cpp  biofu_tracker.hpp  boundary_conditions.hpp  calibration.cpp  calibration.hpp  cmake_install.cmake  component.cpp  component.hpp  config.h  convert.rb  cudapp.hpp  depth_input_component.cpp  depth_input_component.hpp  depth_match.cpp  depth_match.hpp  depth_match_component.cpp  depth_match_component.hpp  glpp.hpp  ground_truth_loader.hpp  init.cpp  kernel_math.hpp  liver_deform.scn  logger.hpp  main.cpp  mesh_loader.hpp  mutable_cuda_mechanical_object.cpp  mutable_cuda_mechanical_object.hpp  mutable_cuda_spring_force_field.cpp  mutable_cuda_spring_force_field.hpp  my_cuda_spring_force_field.cpp  (+23 more)
src/shaders/: associate.geom  associate.vert
(+410 files in other folders)
